--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,6 @@ volumes:
      type: tmpfs
      device: tmpfs
 
-networks:
-  kong-net:
-    external: false
 
 services:
   kong-migrations:
@@ -33,8 +30,6 @@ services:
       <<: *kong-env
     secrets:
       - kong_postgres_password
-    networks:
-      - kong-net
     restart: on-failure
 
   kong-migrations-up:
@@ -47,16 +42,12 @@ services:
       <<: *kong-env
     secrets:
       - kong_postgres_password
-    networks:
-      - kong-net
     restart: on-failure
 
   kong:
     platform: linux/arm64
     image: "${KONG_DOCKER_TAG:-kong:latest}"
     user: "${KONG_USER:-kong}"
-    depends_on:
-      - db
     environment:
       <<: *kong-env
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
@@ -69,8 +60,6 @@ services:
       KONG_DECLARATIVE_CONFIG: "/opt/kong/kong.yaml"
     secrets:
       - kong_postgres_password
-    networks:
-      - kong-net
     ports:
       # The following two environment variables default to an insecure value (0.0.0.0)
       # according to the CIS Security test.
@@ -114,8 +103,6 @@ services:
     restart: on-failure
     stdin_open: true
     tty: true
-    networks:
-      - kong-net
     volumes:
       - kong_data:/var/lib/postgresql/data
     ports:
@@ -125,8 +112,6 @@ services:
     container_name: user-api
     image: user-api
     build: ./user-api
-    networks:
-      - kong-net
     ports:
       - "8002:8002"
 
@@ -134,10 +119,15 @@ services:
     container_name: client-api
     image: client-api
     build: ./client-api
-    networks:
-      - kong-net
     ports:
       - "8003:8003"
+
+  api-user:
+    container_name: api-user
+    image: api-user
+    build: ./api-user
+    volumes:
+      - ./api-user:/app
 
 
 secrets:
