--- a/api-user/Dockerfile
+++ b/api-user/Dockerfile
@@ -1,6 +1,8 @@
 FROM ruby:2.7.5-alpine
 
-RUN apk add git
+RUN apk add git &&\
+    apk update && \
+    apk add --virtual build-dependencies build-base
 RUN gem install bundle
 
 WORKDIR /app
