--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,7 @@
 FROM ruby:2.7.5-alpine
 
-RUN apk add git &&\
-    apk update && \
-    apk add --virtual build-dependencies build-base
+RUN apk add git
+
 RUN gem install bundle
 
 WORKDIR /app
